--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h1>Getting server updates</h1>
 <div id="result"></div>
+  <h3> This is my first website which is online !</h3>
 
 <script>
 if(typeof(EventSource) !== "undefined") {
